force-app/main/default/objects/Download_History__c/Download_History__c.object-meta.xml
<CustomObject>
    <description>Tracks customer community downloads.</description>
    <label>Download History</label>
    <nameField>
        <displayFormat>DH{000000000}</displayFormat>
        <label>Download History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Download History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>