force-app/main/default/objects/Download_History__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Download History</relationshipLabel>
    <relationshipName>Download_History</relationshipName>
    <type>Lookup</type>
</CustomField>