force-app/main/default/objects/Download_History__c/fields/Downloaded_Software__c.field-meta.xml
<CustomField>
    <fullName>Downloaded_Software__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Downloaded Software</label>
    <referenceTo>Release_Software__c</referenceTo>
    <relationshipLabel>Download History</relationshipLabel>
    <relationshipName>Download_History</relationshipName>
    <type>Lookup</type>
</CustomField>