force-app/main/default/objects/Download_History__c/fields/EULA_Accepted__c.field-meta.xml
<CustomField>
    <fullName>EULA_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EULA Accepted</label>
    <type>Checkbox</type>
</CustomField>