force-app/main/default/objects/Download_History__c/fields/EULAversion__c.field-meta.xml
<CustomField>
    <fullName>EULAversion__c</fullName>
    <description>Contract version in Ironclad/pactsafe - CS21-706</description>
    <label>EULA Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>