force-app/main/default/objects/Download_History__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <label>IP Address</label>
    <type>TextArea</type>
</CustomField>