force-app/main/default/objects/Download_History__c/fields/IroncladPayload__c.field-meta.xml
<CustomField>
    <fullName>IroncladPayload__c</fullName>
    <description>Payload received from Ironclad on contract agreement - CS21-706</description>
    <label>Ironclad Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>