force-app/main/default/objects/Download_History__c/validationRules/Require_EULA.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_EULA</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW()
&amp;&amp;
EULA_Accepted__c==false</errorConditionFormula>
    <errorMessage>You must accept the EULA to begin your download.</errorMessage>
</ValidationRule>